--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/qzmmr/http-axios#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "es6-promise": "^4.2.4",
+    "es6-promise": "^4.2.4"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
