[更新]取消正式版,更名https-axios,发布0.1.0非正式版本

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "http-axios",
-  "version": "1.0.2",
+  "name": "https-axios",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/http.js",
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.config.dev.js --hot --env",
     "build": "webpack --config build/webpack.config.prod.js",
