[更新]发布正式版,恢复命名https-axios

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "https-axios",
-  "version": "0.1.0",
+  "name": "http-axios",
+  "version": "1.0.3",
   "description": "",
   "main": "src/http.js",
   "scripts": {
