--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "http-axios",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
-  "main": "src/http.js",
+  "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.config.dev.js --hot --env",
-    "build": "webpack --config build/webpack.config.prod.js",
+    "build": "babel src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,8 @@
     "es6-promise": "^4.2.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "webpack": "^4.15.1",
